Fix orientation/status bar issues and update library view modes
- Fix: Prevent forced landscape on app startup by setting requestedOrientation to UNSPECIFIED in MainActivity.
- Fix: Lock landscape orientation specifically when in Frontend mode using LaunchedEffect.
- Fix: Hide status bar by default across all views by updating PrefManager default and forcing UI hide on startup/resume.
- Feature: Added LibraryFrontendPane and AnimatedWavyBackground components.
- UI: Implemented 'Frontend' layout option in Library settings and BottomSheet.
- UI: Refactored LibraryListPane to handle new layout modes and unified account/search headers.
- Refactor: Updated ContainerManager and ContainerUtils to persist DXVK/VKD3D version selections and performance modes.
- Refactor: Enhanced GOG, Epic, and Amazon services with updated installation and metadata checks.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,6 +109,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity-alias>
+        <provider
+            android:name=".core.GNPStorageProvider"
+            android:authorities="${applicationId}.storageprovider"
+            android:exported="true"
+            android:grantUriPermissions="true"
+            android:permission="android.permission.MANAGE_DOCUMENTS">
+            <intent-filter>
+                <action android:name="android.content.action.DOCUMENTS_PROVIDER" />
+            </intent-filter>
+        </provider>
+
         <service
             android:name=".service.SteamService"
             android:enabled="true"
