--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,6 +17,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Create local.properties
+        run: touch local.properties
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
@@ -27,5 +30,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: GameNative-Performance-APK
-          
           path: app/build/outputs/apk/debug/*.apk
